# reVISION-Zybo-Z7-20

./: .gitignore  README.md  create_dsa.tcl  z7_20_hdmi.tcl  z7_20_hdmi.xdc  z7_20_hdmi_preset.tcl
petalinux/: .gitignore  BUILD.txt  TEST.txt
petalinux/meta-inipro/classes/: showvars.bbclass
petalinux/meta-inipro/recipes-apps/libsds/: libsds.bb
petalinux/meta-inipro/recipes-core/init-ifupdown/files/: interfaces
petalinux/meta-inipro/recipes-modules/clk-dglnt-dynclk/: clk-dglnt-dynclk.bb
petalinux/meta-inipro/recipes-modules/clk-dglnt-dynclk/files/: Makefile
petalinux/meta-inipro/recipes-modules/digilent-encoder/: digilent-encoder.bb
petalinux/meta-inipro/recipes-modules/digilent-encoder/files/: Makefile
petalinux/meta-inipro/recipes-modules/hdmi-in/: hdmi-in.bb
petalinux/meta-inipro/recipes-modules/hdmi-in/files/: Makefile  hdmi-in.c
petalinux/meta-inipro/recipes-multimedia/v4l2apps/: v4l-utils_1.10.1.bbappend
sdsoc/: .gitignore  copy.sh  platform.tcl
sdsoc/resources/linux/image/: install.sh
sdsoc/resources/prebuilt/: apsys_0.xml  portinfo.c
sdsoc/resources/samples/filter2d/: description.json
sdsoc/resources/samples/filter2d/src/: filter2d_sds.cpp  filter2d_sds.h
sdsoc/resources/samples/filter2d/top/: filter2d.c
sdsoc/resources/samples/mmultadd/: description.json
sdsoc/sw/f2d/: CMakeLists.txt  INSTALL.txt  main.c
sdsoc/sw/f2d/src/: filter2d_sds.cpp
sdsoc/sw/f2d/top/: filter2d_cv.cpp
sdsoc/sw/video_lib/: CMakeLists.txt  INSTALL.txt
sdsoc/sw/video_lib/include/: common.h  filter.h  helper.h  video.h
sdsoc/sw/video_lib/src/: drm_helper.c  filter.c  log_events.c  m2m_sw_pipeline.c  mediactl_helper.c  s2m_pipeline.c  v4l2_helper.c  vcap_file.c  vcap_hdmi.c  video.c  video_src.c
sdsoc/sw/video_lib/src/include/: common_int.h  drm_helper.h  log_events.h  m2m_sw_pipeline.h  mediactl_helper.h  s2m_pipeline.h  v4l2_helper.h  vcap_file_int.h  vcap_hdmi_int.h  video_int.h
